1master 高可用注册中心

--- a/panoramic-monitor-master-eureka-discovery/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-master-eureka-discovery/src/main/resources/application-pro.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8082
+  port: 8761
 spring:
   application:
-    name: monitor-eureka    # 项目名称尽量用小写
+    name: monitor-master-eureka    # 项目名称尽量用小写
 security:
   user:
     name: user
@@ -11,17 +11,17 @@ eureka:
   instance:
     lease-expiration-duration-in-seconds: 30
     lease-renewal-interval-in-seconds: 10
-    hostname: discovery    # 指定该Eureka实例的主机名
+    hostname: master-discovery    # 指定该Eureka实例的主机名
   server:
     enable-self-preservation: false			# 设为false，关闭自我保护
     eviction-interval-timer-in-ms: 4000    # 清理间隔（单位毫秒，默认是60*1000）
   client:
     healthcheck:
           enabled: true
-    registerWithEureka: true
-    fetchRegistry: true
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:user@${eureka.instance.hostname}:8082/eureka/,http://user:user@${eureka.instance.hostname}:8082/eureka/
+      defaultZone: http://user:user@panoramic.neweplatform.com:8762/eureka/
 #spring:
 # devtools:
 #    restart:
