--- a/panoramic-monitor-slave-eureka-discovery/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-slave-eureka-discovery/src/main/resources/application-pro.yml
@@ -21,7 +21,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:user@116.62.194.143:8761/eureka/
+      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/
 #spring:
 # devtools:
 #    restart:
