--- a/panoramic-monitor-manage-provider/src/main/resources/pro-quartz.properties
+++ b/panoramic-monitor-manage-provider/src/main/resources/pro-quartz.properties
@@ -28,14 +28,14 @@ org.quartz.jobStore.class:org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass:org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties:true
 org.quartz.jobStore.tablePrefix:qrtz_
-org.quartz.jobStore.dataSource:schedule
+org.quartz.jobStore.dataSource:scheduled-task
 org.quartz.jobStore.isClustered = true
  
 #============================================================================
 # Configure Datasources
 #============================================================================
-org.quartz.dataSource.schedule.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.schedule.URL:jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/schedule
-org.quartz.dataSource.schedule.user:xinyiroot
-org.quartz.dataSource.schedule.password:root
+org.quartz.dataSource.scheduled-task.driver:com.mysql.jdbc.Driver
+org.quartz.dataSource.scheduled-task.URL:jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/scheduled-task
+org.quartz.dataSource.scheduled-task.user:panoramicroot
+org.quartz.dataSource.scheduled-task.password:Newgrading@2018
 org.quartz.dataSource.schedule.maxConnections:10
