--- a/panoramic-monitor-master-eureka-discovery/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-master-eureka-discovery/src/main/resources/application-pro.yml
@@ -21,7 +21,7 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://user:user@panoramic.neweplatform.com:8762/eureka/
+      defaultZone: http://user:user@www.neweplatform.com:8762/eureka/
 #spring:
 # devtools:
 #    restart:
