--- a/panoramic-monitor-gateway-zuul/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-gateway-zuul/src/main/resources/application-pro.yml
@@ -1,9 +1,11 @@
 server:
-  port: 8888         # 指定该zuul实例的端口
+  port: 9999         # 指定该zuul实例的端口
 security:
   user:
     name: user
     password: user
+  basic:
+    enabled: false
 spring:
   application:
     name: monitor-zuul    # 项目名称尽量用小写
@@ -36,7 +38,7 @@ zuul:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/,http://user:user@panoramic.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@www.neweplatform.com:8761/eureka/,http://user:user@www.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
