--- a/panoramic-monitor-manage-provider/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-manage-provider/src/main/resources/application-pro.yml
@@ -11,7 +11,7 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/,http://user:user@panoramic.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@www.neweplatform.com:8761/eureka/,http://user:user@www.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
@@ -26,8 +26,8 @@ dev:
     datasource:
       masterurl: jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/panoramic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
       slaveurl: jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/panoramic?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-      username: xinyiroot
-      password: root
+      username: panoramicroot
+      password: Newgrading@2018
       driverClassName: com.mysql.jdbc.Driver
        # 参数
       initialSize: 5
