--- a/panoramic-monitor-risk-warning/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-risk-warning/src/main/resources/application-pro.yml
@@ -5,10 +5,12 @@ security:
   user:
     name: user
     password: user
+  basic:
+    enabled: false
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@panoramic.neweplatform.com:8761/eureka/,http://user:user@panoramic.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@www.neweplatform.com:8761/eureka/,http://user:user@www.neweplatform.com:8762/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
@@ -28,8 +30,8 @@ dev:
   spring:
     datasource:
       url: jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/risk?useUnicode=true&characterEncoding=utf-8
-      username: xinyiroot
-      password: root
+      username: panoramicroot
+      password: Newgrading@2018
       driverClassName: com.mysql.jdbc.Driver
        # 参数
       initialSize: 5
@@ -55,6 +57,15 @@ logging:
     org.hibernate.type.descriptor.sql.BasicExtractor: TRACE
     com.itmuch.youran.persistence: ERROR
 
+Email:
+  Config:
+    protocol: smtp
+    host: smtp.exmail.qq.com
+    port: 465
+    address: risk-warning@newhope-data.com
+    password: Risk@1234
+    needSSL : true
+    mailContent : 您好，%s%s%s  %s = %s 超出阈值(%s,%s),触发%d级预警  请登录PC端 192.168.1.102:8088 查看预警处理结果
 
 # 热发布插件
 
