--- a/panoramic-monitor-scheduled-task/src/main/resources/quartz-pro.properties
+++ b/panoramic-monitor-scheduled-task/src/main/resources/quartz-pro.properties
@@ -36,6 +36,6 @@ org.quartz.jobStore.isClustered = true
 #============================================================================
 org.quartz.dataSource.scheduled-task.driver:com.mysql.jdbc.Driver
 org.quartz.dataSource.scheduled-task.URL:jdbc:mysql://rm-bp1d2s03ka9b803602o.mysql.rds.aliyuncs.com:3306/scheduled-task
-org.quartz.dataSource.scheduled-task.user:xinyiroot
-org.quartz.dataSource.scheduled-task.password:root
+org.quartz.dataSource.scheduled-task.user:panoramicroot
+org.quartz.dataSource.scheduled-task.password:Newgrading@2018
 org.quartz.dataSource.scheduled-task.maxConnections:10
