--- a/panoramic-monitor-user-provider/src/main/resources/application-pro.yml
+++ b/panoramic-monitor-user-provider/src/main/resources/application-pro.yml
@@ -10,7 +10,7 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://user:user@www.neweplatform.com:8761/eureka/,http://user:user@www.neweplatform.com:8762/eureka/   # 指定注册中心的地址
+      defaultZone: http://user:user@eureka.neweplatform.com/eureka/   # 指定注册中心的地址
   instance:
     preferIpAddress: true
 #    hostname : discovery   # 指定主机名时候通过主机名访问,否则通过ip地址
