--- a/panoramic-monitor-parent/pom.xml
+++ b/panoramic-monitor-parent/pom.xml
@@ -597,6 +597,7 @@
 		<module>../panoramic-monitor-invoke</module>
 		<module>../panoramic-monitor-doc</module>
 		<module>../panoramic-monitor-gateway-zuul</module>
+		<module>../panoramic-monitor-auth</module>
 
 	</modules>
 
