--- a/panoramic-monitor-auth/pom.xml
+++ b/panoramic-monitor-auth/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>panoramic-monitor-user</artifactId>
+    <artifactId>panoramic-monitor-auth</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <properties>
@@ -17,10 +17,10 @@
         <encoding.version>UTF-8</encoding.version>
     </properties>
     <modules>
-        <module>../panoramic-monitor-user-provider</module>
-        <module>../panoramic-monitor-user-api</module>
-        <module>../panoramic-monitor-user-service</module>
-        <module>../panoramic-monitor-user-dao</module>
+        <module>../panoramic-monitor-auth-provider</module>
+        <module>../panoramic-monitor-auth-api</module>
+        <module>../panoramic-monitor-auth-service</module>
+        <module>../panoramic-monitor-auth-dao</module>
     </modules>
 
 </project>
